# uflx

./: .gitignore  DESIGN_CHOICES.md  LANGUAGE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
doc/: api.rst  conf.py  index.rst
examples/: linear_form.py  mass.py  stiffness.py
test/: test_algorithms.py  test_cell.py  test_codegeneration.py  test_dummy.py  test_entity.py  test_finite_element.py  test_forms.py  test_function_space.py  utils.py
uflx/: __init__.py  cell.py  complex.py  differentiation.py  domain.py  domains.py  entities.py  expression.py  expressions.py  finite_element.py  finite_elements.py  function.py  function_space.py  function_spaces.py  functions.py  integral.py  integrals.py  maps.py  operators.py  quadrature.py  scalars.py  utils.py
uflx/codegeneration/: __init__.py  c.py  generate.py  nodes.py  symbols.py
uflx/graphs/: __init__.py  graphs.py
uflx/graphs/algorithms/: __init__.py  replace.py
